# sens-o-matic

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md  api.yaml
src/: lib.rs  main.rs  matching.rs  router.rs  state.rs  state_machine.rs  what.rs  when.rs  who.rs
src/handlers/: groups.rs  hangouts.rs  mod.rs  pings.rs  responses.rs  users.rs
src/models/: error.rs  group.rs  hangout.rs  mod.rs  ping.rs  response.rs  user.rs
tests/hurl/edge_cases/: 01_no_responses.hurl  02_everyone_cancels.hurl  03_no_time_overlap.hurl
tests/hurl/entities/: 01_users.hurl  02_groups.hurl  03_pings.hurl  04_responses.hurl  05_hangouts.hurl
tests/hurl/errors/: 01_validation.hurl  02_not_found.hurl  03_conflict.hurl
tests/hurl/flows/: 01_happy_path.hurl  02_change_response.hurl
tests/hurl/state_machine/: 01_ping_sent.hurl  02_gathering.hurl  03_matching.hurl  04_venue_confirmed.hurl  05_active_hangout.hurl  06_complete.hurl  07_cancelled.hurl  08_no_match.hurl
