[package]
name = "sens-o-matic"
version = "0.1.0"
edition = "2024"
description = "Backend API server for coordinating spontaneous group meetups"
license = "MIT"
authors = ["Mike Sandman <mike@thesandmans.com>"]
repository = "https://github.com/n8behavior/sens-o-matic"
readme = "README.md"
rust-version = "1.85"
keywords = ["meetup", "coordination", "api", "axum", "social"]
categories = ["web-programming::http-server"]
exclude = ["docs/", "tests/", "justfile"]

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
rand = "0.9.2"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
